--- a/src/CustomCSS/about.module.css
+++ b/src/CustomCSS/about.module.css
@@ -1,8 +1,8 @@
 .aboutH3 {
     text-transform: uppercase;
-    color: black;
+    color: orangered;
     font-weight: 600;
-    padding-left: 35px;
+    padding-left: 0px;
     position: relative;
     text-decoration: none;
 }
@@ -10,8 +10,8 @@
     content: '';
     position: absolute;
     bottom: -10px;
-    left: 35px;
-    width: 100px;
+    left: 0px;
+    width: 60px;
     height: 3px;
     background-color: #19B33B;
 }
